@@ -5,3 +5,8 @@ IaaS
    :members:
    :undoc-members:
    :show-inheritance:
+
+.. autoclass:: jelastic.api.iaas._Project
+   :members:
+   :undoc-members:
+   :show-inheritance:
